--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           stable: 'false'
-          go-version: '1.15.0' # The Go version to download (if necessary) and use.
-      - run: go version
+          go-version: '1.15.5' # The Go version to download (if necessary) and use.
+      - run: go test ./...
   golangci:
     name: lint
     runs-on: ubuntu-latest
