--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ on:
       - main
   pull_request:
 jobs:
-  setup-go:
-    name: setup go
+  test:
+    name: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,8 +17,8 @@ jobs:
         with:
           stable: 'false'
           go-version: '1.15.5' # The Go version to download (if necessary) and use.
-      - run: go test ./...
-  golangci:
+      - run: go test -race -cover -covermode=aromic ./...
+  golangci-xmachina:
     name: lint
     runs-on: ubuntu-latest
     steps:
@@ -30,7 +30,26 @@ jobs:
           version: v1.33
 
           # Optional: working directory, useful for monorepos
-          # working-directory: somedir
+          working-directory: xmachina
+
+          # Optional: golangci-lint command line arguments.
+          # args: --issues-exit-code=0
+
+          # Optional: show only new issues if it's a pull request. The default value is `false`.
+          # only-new-issues: true
+  golangci-xmath:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
+          version: v1.33
+
+          # Optional: working directory, useful for monorepos
+          working-directory: xmath
 
           # Optional: golangci-lint command line arguments.
           # args: --issues-exit-code=0
