--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
           version: v1.33
 
           # Optional: working directory, useful for monorepos
-          #          working-directory: xmachina
+          working-directory: xmachina
 
           # Optional: golangci-lint command line arguments.
-          args: --skip-dirs examples --print-issued-lines
+          args: --print-issued-lines
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
@@ -54,5 +54,5 @@ jobs:
           # Optional: golangci-lint command line arguments.
           args: --print-issued-lines
 
-            # Optional: show only new issues if it's a pull request. The default value is `false`.
+          # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
