--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           stable: 'false'
           go-version: '1.15.5' # The Go version to download (if necessary) and use.
-      - run: go test -race -cover -covermode=aromic ./...
+      - run: go test -race -cover -covermode=atomic ./...
   golangci-xmachina:
     name: lint-xmachina
     runs-on: ubuntu-latest
