--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,29 +30,10 @@ jobs:
           version: v1.33
 
           # Optional: working directory, useful for monorepos
-          working-directory: xmachina
+#          working-directory: xmachina
 
           # Optional: golangci-lint command line arguments.
-          args: --print-issued-lines
-
-          # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
-  golangci-xmath:
-    name: lint-xmath
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.33
-
-          # Optional: working directory, useful for monorepos
-          working-directory: xmath
-
-          # Optional: golangci-lint command line arguments.
-          args: --print-issued-lines
+          #          args: --print-issued-lines
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
