--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
           stable: 'false'
           go-version: '1.15.5' # The Go version to download (if necessary) and use.
       - run: go test -race -cover -covermode=atomic ./...
-  golangci-xmachina:
-    name: lint-xmachina
+  golangci:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,12 +28,11 @@ jobs:
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.33
-          skip-dirs-use-default: true
           # Optional: working directory, useful for monorepos
-#          working-directory: xmachina
+          #          working-directory: xmachina
 
           # Optional: golangci-lint command line arguments.
-          #          args: --print-issued-lines
+          args: --skip-dirs-use-default=true
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
