--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           #          working-directory: xmachina
 
           # Optional: golangci-lint command line arguments.
-          args: --skip-dirs-use-default=true
+          args: --skip-dirs examples.*
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
