--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           working-directory: xmachina
 
           # Optional: golangci-lint command line arguments.
-          args: --print-issued-lines
+          args: --exclude-use-default=false
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
@@ -52,7 +52,7 @@ jobs:
           working-directory: xmath
 
           # Optional: golangci-lint command line arguments.
-          args: --print-issued-lines
+          args: --exclude-use-default=false
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
