--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,3 +56,13 @@ jobs:
           stable: 'false'
           go-version: '1.15.5' # The Go version to download (if necessary) and use.
       - run: go test -race -cover -covermode=atomic ./...
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          stable: 'false'
+          go-version: '1.15.5' # The Go version to download (if necessary) and use.
+      - run: go build -race ./...
